--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,12 +1,15 @@
 body {
     background: #FFD0B5;
     text-align: center;
+    position: relative;
 }
 
-#container {
+.wrapper {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    width: 80%;
+    max-width: 1920px;
 }
 
 code {
@@ -46,7 +49,7 @@ code {
 .menu {
     margin: 2px;
     width: 220px;
-    height: 125vh;
+    height: 950px;
     font-family: Georgia, serif;;
     background-color: #AB8B79;
     font-weight: bold;
@@ -154,10 +157,47 @@ code {
     align-content: center;
 }
 
-footer {
+.footer {
+    width: 250px;
     position: absolute;
-    top: 1020px;
-    left: 70vw;
     bottom: 0;
-    width: 500px;
+    right: 0;
+    padding: 10px;
+}
+
+
+@media (max-width: 800px) {
+    .dog-photo {
+        display: none;
+    }
+
+    .main-text {
+        width: 100%;
+        margin-left: 0;
+        padding-top: 100px;
+    }
+}
+
+@media (min-width: 800px) and (max-width: 1200px) {
+    .wrapper {
+        width: 90%;
+    }
+
+    .main-text {
+        width: 70%;
+    }
+}
+
+@media (min-width: 1200px) {
+    .wrapper {
+        width: 80%;
+    }
+
+    .img {
+        width: 400%;
+    }
+
+    .main-text {
+        width: 60%;
+    }
 }
