--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -48,7 +48,7 @@ code {
 
 .menu {
     margin: 2px;
-    width: 220px;
+    width: 250px;
     height: 950px;
     font-family: Georgia, serif;;
     background-color: #AB8B79;
@@ -73,6 +73,7 @@ code {
 
 .main-text {
     padding-top: 200px;
+    text-align: center;
     width: 550px;
     margin-top: 100px;
     margin-left: 10px;
@@ -171,10 +172,8 @@ code {
         display: none;
     }
 
-    .main-text {
-        width: 100%;
-        margin-left: 0;
-        padding-top: 100px;
+    .grid-container {
+        display: none;
     }
 }
 
@@ -182,22 +181,14 @@ code {
     .wrapper {
         width: 90%;
     }
-
-    .main-text {
-        width: 70%;
-    }
 }
 
 @media (min-width: 1200px) {
     .wrapper {
-        width: 80%;
+        width: 90%;
     }
 
     .img {
-        width: 400%;
-    }
-
-    .main-text {
-        width: 60%;
+        width: 100%;
     }
 }
